[project]
name = "visualdna_to_listing"
version = "0.1.0"
description = "visualdna-to-listing using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.3"
]

[project.scripts]
visualdna_to_listing = "visualdna_to_listing.main:run"
run_crew = "visualdna_to_listing.main:run"
train = "visualdna_to_listing.main:train"
replay = "visualdna_to_listing.main:replay"
test = "visualdna_to_listing.main:test"
run_with_trigger = "visualdna_to_listing.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
